--- a/src/components/carts/CartOverlay.css
+++ b/src/components/carts/CartOverlay.css
@@ -4,7 +4,7 @@
   height: 60%;
   right: 70px;
   overflow-y: scroll;
-  z-index: 1;
+  z-index: 2;
   background-color: white;
 }
 
